# challenger-agent

./: .env.example  .geminiignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LESSONS_LEARNED.md  MAINTENANCE.md  Makefile  README.md  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json
.gemini/: settings.json
.github/workflows/: ci.yaml  deploy-aws.yaml  deploy-azure.yaml  deploy-gcp.yaml  deploy.yml
backend/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  railway.toml
backend/alembic/: env.py
backend/alembic/versions/: 2026_04_04_2203-f965869e64a3_initial_schema.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  chat.py  models.py  sessions.py  users.py
backend/app/core/: config.py
backend/app/db/: base.py  seed.py  session.py
backend/app/db/models/: __init__.py  message.py  refresh_token.py  session.py  user.py
backend/app/dependencies/: auth.py
backend/app/prompts/: README.md  analysis_system.py
backend/app/schemas/: auth.py  chat.py  graph.py  models.py  session.py  user.py
backend/app/services/: auth_service.py  encryption_service.py  llm_service.py
backend/tests/: conftest.py  test_auth.py  test_chat.py  test_main.py  test_schemas.py  test_services.py  test_sessions.py  test_users.py
deploy/: Dockerfile.backend  README.md  docker-compose.dev.yml  docker-compose.yaml
deploy/aws/: README.md  deploy.sh  setup-infra.sh
deploy/aws/terraform/: .gitignore  backend.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
deploy/aws/terraform/bootstrap/: main.tf
deploy/azure/: deploy.sh
deploy/gcp/: deploy.sh
deploy/railway/: README.md
deploy/tests/: test_deploy_scripts.sh
docker/postgres/: init.sql
docs/claude_logs/: DECISION_LOG.md  LESSONS_LEARNED.md  SESSION_SUMMARY.md
docs/plan/: 01_PROJECT_PLAN.md  02_TODOS.md  03_ARCHITECTURE.md  04_LIBRARIES_AND_FRAMEWORKS.md  05_INFRASTRUCTURE_AND_DEPLOYMENT.md  05_INFRASTRUCTURE_AND_DEPLOYMENT_ALT.md  05_INFRASTRUCTURE_AND_DEPLOYMENT_AWS.md  06_BACKEND_IMPLEMENTATION.md  06_BACKEND_IMPLEMENTATION_GOOGLE.md  07_FRONTEND_IMPLEMENTATION.md  07_FRONTEND_IMPLEMENTATION_SVELTE.md  08_LLM_AND_PROMPT.md
frontend/: README.md  package.json  playwright.config.ts  svelte.config.js  vite.config.ts
frontend/e2e/: auth.spec.ts  helpers.ts  tsconfig.json  user-journey.spec.ts
frontend/src/: app.css  app.d.ts
frontend/src/lib/: config.ts  example.test.ts
frontend/src/lib/schemas/: graph.test.ts  graph.ts
frontend/src/lib/services/: api.ts  authService.ts  chatService.test.ts  chatService.ts  sessionService.ts  userService.ts
frontend/src/lib/stores/: authStore.ts  chatStore.test.ts  chatStore.ts  graphStore.test.ts  graphStore.ts  sessionStore.ts
frontend/src/lib/utils/: debounce.test.ts  debounce.ts  graphGuards.test.ts  graphGuards.ts  graphLayout.test.ts  graphLayout.ts  graphStyles.ts
frontend/src/routes/: +error.svelte  +layout.svelte
infra/: Dockerfile.frontend  README.md  docker-compose.yaml
(+39 files in other folders)
